<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="60dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/onboard3"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onb3_text_1"
            android:textAlignment="center"
            android:textColor="@color/text1"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:text="@string/onb3_text_2"
            android:textAlignment="center"
            android:textSize="15sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="signIn"
            android:layout_gravity="bottom"
            android:background="@drawable/blue_button_hover"
            android:text="@string/button_text3"
            android:textAllCaps="false"
            android:textColor="@drawable/white_text_hover"
            />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onb3_text_3"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="15sp"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>